# nemotron-cutile-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  dev.sh
.cargo/: config.toml
ai-docs/: executed-plan-add-benchmark-comparison.md  executed-plan-add-cuda-dev-dockerfile.md  executed-plan-add-dev-container-launch-script.md  executed-plan-add-missing-gpu-validations.md  executed-plan-audit-kernel-device-infra.md  executed-plan-audit-kernel-wrappers-advanced.md  executed-plan-audit-kernel-wrappers-basic.md  executed-plan-audit-model-gpu-path.md  executed-plan-audit-precision-matrix.md  executed-plan-build-nemotron-inference.md  executed-plan-implement-cutile-activations.md  executed-plan-implement-cutile-attention.md  executed-plan-implement-cutile-backend.md  executed-plan-implement-cutile-conv1d.md  executed-plan-implement-cutile-embedding.md  executed-plan-implement-cutile-gemm.md  executed-plan-implement-cutile-moe-routing.md  executed-plan-implement-cutile-quantize.md  executed-plan-implement-cutile-rmsnorm-kernel.md  executed-plan-implement-cutile-softmax.md  executed-plan-implement-cutile-ssm.md  executed-plan-validate-cutile-gpu.md  executed-plan-verify-implementation-tests.md  nemotron-rs-executed-plan.md
nemotron-cli/: Cargo.toml
nemotron-cli/src/: main.rs
nemotron-cli/tests/: preview_integration.rs
nemotron-kernels/: Cargo.toml
nemotron-kernels/src/: activations.rs  attention.rs  conv1d.rs  device.rs  embedding.rs  gemm.rs  lib.rs  moe_routing.rs  quantize.rs  rms_norm.rs  softmax.rs  ssm.rs  tensor.rs
nemotron-model/: Cargo.toml
nemotron-model/src/: config.rs  generate.rs  lib.rs  model.rs  tokenizer.rs  weights.rs
nemotron-model/tests/: model_runtime_integration.rs  tokenizer_integration.rs  weights_integration.rs
nemotron-nn/: Cargo.toml
nemotron-nn/src/: attention.rs  block.rs  cache.rs  lib.rs  linear.rs  mamba2.rs  mlp.rs  moe.rs
nemotron-validate/: Cargo.toml
nemotron-validate/src/: benchmark.rs  e2e.rs  main.rs
nemotron-validate/tests/: validator_integration.rs
