[workspace]
members = [
    "nemotron-kernels",
    "nemotron-nn",
    "nemotron-model",
    "nemotron-cli",
    "nemotron-validate",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
cutile = { git = "https://github.com/NVlabs/cutile-rs.git", package = "cutile" }
half = "2.4"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
