[package]
name = "nemotron-model"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nemotron-kernels = { path = "../nemotron-kernels" }
nemotron-nn = { path = "../nemotron-nn" }
serde.workspace = true
serde_json.workspace = true
tokenizers = { workspace = true, features = ["onig"] }
