[package]
name = "nemotron-validate"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "nemotron-validate"
path = "src/main.rs"

[dependencies]
nemotron-kernels = { path = "../nemotron-kernels" }
nemotron-model = { path = "../nemotron-model" }
nemotron-nn = { path = "../nemotron-nn" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
